[gd_scene load_steps=5 format=3 uid="uid://lovbe55o5v1o"]

[ext_resource type="PackedScene" uid="uid://cr0jqavpandfy" path="res://Nodes/Enemies/enemy.tscn" id="1_mf31a"]
[ext_resource type="Script" uid="uid://bkpjq3vvbxyl2" path="res://Nodes/Enemies/enemy_twin.gd" id="2_mf31a"]
[ext_resource type="PackedScene" uid="uid://dvgiyukkhh0d5" path="res://Nodes/Spawners/bullet_spawner.tscn" id="3_cmjk4"]
[ext_resource type="PackedScene" uid="uid://cwt3q0k5oqiej" path="res://Nodes/Bullet Patterns/bullet_pattern_node.tscn" id="4_6lnux"]

[node name="enemy" instance=ExtResource("1_mf31a")]
script = ExtResource("2_mf31a")
speed = 10.0

[node name="bullet_pattern_node" parent="." index="3" instance=ExtResource("4_6lnux")]
bullet_pattern_type = 3

[node name="shooting_timer" type="Timer" parent="." index="4"]
wait_time = 0.5

[node name="bullet_spawner" parent="enemy_moving_components" index="2" instance=ExtResource("3_cmjk4")]
position = Vector2(0, 7)

[connection signal="timeout" from="shooting_timer" to="." method="_on_shooting_timer_timeout"]
